# onepilotapp

./: .gitignore  .gitmodules  LICENSE  README.md  VISION.md  openclaw.plugin.json  package.json
.github/workflows/: release.yml
docs/: catalog.json
docs/img/diagrams/: framework-pool.mmd  how-agents-work.mmd  what-onepilot-is.mmd
plugins/hermes/: README.md
plugins/hermes/onepilot-platform/: README.md  __init__.py  catalog.py  dump_catalog.py  plugin.yaml  pyproject.toml
plugins/hermes/onepilot-skills/: README.md  SECURITY.md  __init__.py  plugin.yaml  pyproject.toml  skills_dump.py
plugins/hermes/onepilot-skills/skill_lib/: hub.py  installed.py
plugins/hermes/onepilot-skills/tests/: conftest.py  test_hub.py  test_inspect.py  test_installed.py
plugins/openclaw/onepilot-channel/: README.md  TESTING.md  openclaw.plugin.json  package.json
plugins/openclaw/onepilot-channel/src/: constants.js  env.js  index.js  messaging.js  outbound.js  realtime.js  stream.js  ws-raw.js
plugins/paperclip/: README.md
src/: constants.js  env.js  index.js  messaging.js  outbound.js  realtime.js  ws-raw.js
